Bugfix: 'text-align: left' is equivalent to 'text-align: start' by default

--- a/client/signup/style.scss
+++ b/client/signup/style.scss
@@ -639,7 +639,7 @@ body.is-section-signup.is-white-signup .layout:not( .dops ):not( .is-wccom-oauth
 					}
 
 					@include break-medium {
-						text-align: end;
+						text-align: start;
 					}
 				}
 			}
